--- a/IdentityManagerWebApp/IdentityManagerWebApp.csproj
+++ b/IdentityManagerWebApp/IdentityManagerWebApp.csproj
@@ -228,6 +228,7 @@
     <Compile Include="Models\Roles.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\AccountManager\EditViewModel.cs" />
     <Compile Include="ViewModels\AccountManager\DetailsViewModel.cs" />
     <Compile Include="ViewModels\AccountManager\AssignClaimsViewModel.cs" />
     <Compile Include="ViewModels\AccountManager\AssignRolesViewModel.cs" />
@@ -1021,6 +1022,7 @@
     <Content Include="Views\Shared\EditorTemplates\Time.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\Url.cshtml" />
     <Content Include="Views\AccountManager\Details.cshtml" />
+    <Content Include="Views\AccountManager\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
