Extract Classes to Files

--- a/IdentityManagerWebApp/IdentityManagerWebApp.csproj
+++ b/IdentityManagerWebApp/IdentityManagerWebApp.csproj
@@ -198,6 +198,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\ApplicacionUserManager.cs" />
+    <Compile Include="App_Start\ApplicationSignInManager.cs" />
     <Compile Include="App_Start\AutoMapperConfig.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
